--- a/src/main/resources/templates/change_password_form.html
+++ b/src/main/resources/templates/change_password_form.html
@@ -13,22 +13,14 @@
 					class="row justify-content-center align-items-center">
 					<div id="login-column" class="col-md-6">
 						<div id="login-box" style="height: 240px;" class="col-md-12">
-							<h3 class="text-center m-3">Your Registered Email</h3>
-							<div class="container" th:if="${session.message}">
-								<div 
-									class="alert alert-danger my-2 text-center" role="alert">
-									<span th:text="${session.message}"></span>
-								</div>
-								<div
-									th:text="${@sessionUtilityBean.removeVerificationMessageFromSession()}"></div>
-							</div>
-							<form action="" th:action="@{/send-otp}" method="post">
+							<h3 class="text-center m-3">Enter new password</h3>
+							<form action="" th:action="@{/change-password}" method="post">
 								<div class="form-group">
-									<input name="email" required="required" type="email"
-										placeholder="Enter your email here" class="form-control">
+									<input name="newpassword" required="required" type="password"
+										placeholder="Enter new password here" class="form-control">
 								</div>
 								<div class="container text-center">
-									<button class="btn btn-warning">send OTP</button>
+									<button class="btn btn-warning">Save</button>
 								</div>
 							</form>
 						</div>
