--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,9 @@
                             </div>
                             <div th:if="${param.logout}" class="alert alert-success">
                             	You have been logged out
+                            </div> 
+                            <div th:if="${param.change}" class="alert alert-success">
+                            	<p th:text="${param.change}"></p>
                             </div>                            
                             <div class="form-group">
                                 <label for="username" class="text-info">Username:</label><br>
