--- a/src/main/resources/templates/verify_otp.html
+++ b/src/main/resources/templates/verify_otp.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">  
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:replace="base::layout(~{::section})">
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
 <body>
 	<section>
-    <div id="login">
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" style="height:240px;" class="col-md-12">
-						<div class="alert alert-success mt-3" role="alert">We have sent otp to your email..</div>
-						<form action="" th:action="@{/send-otp}" method="post">
-							<div class="form-group">
-								<input name="otp" required="required" type="text" placeholder="Enter your otp here" class="form-control">
+		<div id="login">
+			<div class="container">
+				<div id="login-row"
+					class="row justify-content-center align-items-center">
+					<div id="login-column" class="col-md-6">
+						<div id="login-box" style="height: 240px;" class="col-md-12">
+							<div class="alert alert-success mt-3" role="alert">We have
+								sent otp to your email..</div>
+							<div class="container" th:if="${session.message}">
+								<div class="alert alert-danger my-2 text-center" role="alert">
+									<span th:text="${session.message}"></span>
+								</div>
+								<div
+									th:text="${@sessionUtilityBean.removeVerificationMessageFromSession()}"></div>
 							</div>
-							<div class="container text-center">
-								<button class="btn btn-warning">Verify</button>
-							</div>
-						</form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+							<form action="" th:action="@{/verify-otp}" method="post">
+								<div class="form-group">
+									<input name="otp" required="required" type="text"
+										placeholder="Enter your otp here" class="form-control">
+								</div>
+								<div class="container text-center">
+									<button class="btn btn-warning">Verify</button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
